<resources>
    <string name="app_name">Carpool</string>
    <string name="fragment" translatable="false">Fragment</string>
    <string name="edit_email" translatable="false">Edit email</string>
    <string name="edit_password" translatable="false">Edit password</string>
    <string name="edit_details" translatable="false">Edit details</string>
    <string name="payment_information">Payment Information</string>
    <string name="car_information">Car Information</string>
    <string name="offer_ride">Create ride</string>
    <string name="find_ride">Find ride</string>
    <string name="dbName_user">user</string>
    <string name="dbName_availableRide" translatable="false">available_ride</string>
    <string name="field_username" translatable="false">Username</string>
    <string name="field_email" translatable="false">email</string>
    <string name="pref_sort_label" translatable="false">Sort Order</string>
    <string name="pref_sort_label_popular" translatable="false">Most Popular</string>
    <string name="pref_sort_label_rating" translatable="false">Top Rated</string>
    <string name="pref_sort_label_favorite" translatable="false">Favorites</string>
    <string name="pref_sort_key" translatable="false">sort</string>
    <string name="pref_sort_popular" translatable="false">popular</string>
    <string name="pref_sort_rating" translatable="false">rating</string>
    <string name="pref_sort_favorite" translatable="false">favorites</string>
    <string name="confirm_password_dialog" translatable="false">Confirm Password Dialog</string>
    <string name="welcome_password_dialog" translatable="false">Welcome Dialog</string>
    <string name="API_GET_TOKEN" translatable="false">SEE TUTORIAL</string>
    <string name="API_CHECK_OUT" translatable="false">SEE TUTORIAL</string>
    <string name="google_maps_api_key" translatable="false">SEE TUTORIAL</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Same gender</string>
    <string name="pref_description_social_recommendations" translatable="false">Enable this option for same gender carpooling for extra security measures
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Language</string>
    <string-array name="pref_example_list_titles">
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Italin</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
        <item>-2</item>
    </string-array>
    <string-array name="pref_range_list_titles">
        <item>10 meters</item>
        <item>20 meters</item>
        <item>30 meters</item>
        <item>40+ meters</item>
    </string-array>
    <string-array name="pref_range_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
        <item>-2</item>
    </string-array>
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>
    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>
    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>
    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="title_activity_payment" translatable="false">PaymentActivity</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="welcome_to_carpool" translatable="false">WELCOME TO CARPOOL</string>
    <string name="carpooling_made_easy" translatable="false">Carpooling made easy</string>
    <string name="get_connected_with_carpool" translatable="false">GET CONNECTED WITH CARPOOL</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="or_sign_up_with_other">Register</string>
    <string name="loading" translatable="false">Loading…</string>
    <string name="find_a_ride">Find a ride</string>
    <string name="location">Location</string>
    <string name="destination">Destination</string>
    <string name="get_directions">Get directions</string>
    <string name="hi_i_m_username_and_would_like_to_request_a_seat_on_your_journey">Hi, i\'m {Username} and would like to request a seat on your journey!</string>
    <string name="booking_request">Booking request</string>
    <string name="from_hanoi_vn">From: HaNoi, VN</string>
    <string name="to_nam_dinh_vn">To: NamDinh, VN</string>
    <string name="seats_required_1">Seats required: 1</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="confirmation" translatable="false">Confirmation</string>
    <string name="please_re_enter_password_for_authentication" translatable="false">Please re-enter password for authentication</string>
    <string name="confirm">Confirm</string>
    <string name="or_cancel" translatable="false">Or cancel</string>
    <string name="delete_ride" translatable="false">Delete ride</string>
    <string name="are_you_sure_you_want_to_delete_this_ride_this_cannot_be_undone" translatable="false">Are you sure you want to delete this ride? This cannot be undone</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="dismiss">Dismiss</string>
    <string name="comment" translatable="false">Comment</string>
    <string name="leave_feedback" translatable="false">Leave feedback</string>
    <string name="leave_ride" translatable="false">Leave ride</string>
    <string name="are_you_sure_you_want_to_leave_this_ride" translatable="false">Are you sure you want to leave this ride?</string>
    <string name="yes">Yes</string>
    <string name="ride_created" translatable="false">Ride created</string>
    <string name="you_have_successfully_created_a_carpool_ride" translatable="false">You have successfully created a carpool ride.</string>
    <string name="complete" translatable="false">Complete</string>
    <string name="user_1" translatable="false">User 1</string>
    <string name="participants" translatable="false">Participants</string>
    <string name="_0_rides" translatable="false">0 Rides</string>
    <string name="cost">Cost</string>
    <string name="_6_00" translatable="false">£6.00</string>
    <string name="departure_time" translatable="false">Departure time</string>
    <string name="_5_00_5_30_pm" translatable="false">5:00 – 5:30 PM</string>
    <string name="extra_time_added">Extra time added</string>
    <string name="_5_min" translatable="false">5 min</string>
    <string name="from" translatable="false">From:</string>
    <string name="_18_bishop_street" translatable="false">18 Bishop Street</string>
    <string name="to" translatable="false">To:</string>
    <string name="extra_time" translatable="false">Extra time</string>
    <string name="welcome" translatable="false">Welcome</string>
    <string name="welcome_to_carpool_get_started_viewing_the_help_guide" translatable="false">Welcome to Carpool, get started viewing the help guide.</string>
    <string name="get_started" translatable="false">GET STARTED</string>
    <string name="money" translatable="false">VND</string>
    <string name="booking_pending" translatable="false">Booking pending!</string>
    <string name="_1" translatable="false">1</string>
    <string name="_0_points" translatable="false">0 points</string>
    <string name="_09_03_2022" translatable="false">09/03/2022</string>
    <string name="this_is_a_notification_example" translatable="false">This is a notification example</string>
    <string name="_23th_november_12_55_am" translatable="false">23th November - 12:55 AM</string>
    <string name="_3_seats_left" translatable="false">3 Seats Left!</string>
    <string name="log_out" translatable="false">Log out</string>
    <string name="account_settings" translatable="false">Account settings</string>
    <string name="update_email_address">Update email Address</string>
    <string name="change_password">Change password</string>
    <string name="update_my_details">Update my details</string>
    <string name="update">Update</string>
    <string name="view_profile">View profile</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="no_rides_booked" translatable="false">No rides booked</string>
    <string name="connecting_to_server_please_wait" translatable="false">Connecting to server please wait…</string>
    <string name="payment_confirmation" translatable="false">Payment Confirmation</string>
    <string name="pay" translatable="false">PAY</string>
    <string name="cancel">Cancel</string>
    <string name="MinhMX" translatable="false">John Doe</string>
    <string name="work_and_education" translatable="false">Work and education</string>
    <string name="navy_express" translatable="false">Tesco Express</string>
    <string name="engineering_and_technology_of_university" translatable="false">Engineering and Technology of University</string>
    <string name="Uet" translatable="false">Personal Bio</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been…</string>
    <string name="recent_reviews" translatable="false">Recent reviews</string>
    <string name="great_driver_got_me_in_time" translatable="false">Great driver! got me in time</string>
    <string name="username" translatable="false">Username</string>
    <string name="car_name" translatable="false">Car name</string>
    <string name="registration" translatable="false">Registration</string>
    <string name="date_of_journey">Date of journey</string>
    <string name="tap_for_date">Tap for date</string>
    <string name="pick_up_location">Pick up location</string>
    <string name="tap_for_location">Tap for location</string>
    <string name="pick_up_time">Pick up time</string>
    <string name="tap_for_time" translatable="false">Tap for time</string>
    <string name="enter_extra_time">Enter extra time</string>
    <string name="same_gender">Same gender</string>
    <string name="maxiumum_luggage_kg">Maxiumum luggage (kg)</string>
    <string name="enter_luggage">Enter luggage</string>
    <string name="create_ride">Create ride</string>
    <string name="duration_1_hour_14_mins">Duration: 1 hour 14 mins</string>
</resources>