<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/view"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="60dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="60dp"
            android:id="@+id/leaderboards_profile_picture"
            android:layout_height="60dp"
            android:background="@drawable/blank_profile_picture"
            android:layout_marginStart="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:id="@+id/leaderboardPlace"
            android:text="@string/_1"
            android:textStyle="bold"
            android:textSize="19sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/userID"
            android:text="@string/user_1"
            android:textStyle="bold"
            android:textSize="19sp"
            android:layout_marginStart="120dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/totalPoints"
            android:text="@string/_0_points"
            android:layout_marginTop="30dp"
            android:textColor="@color/ball_release_color"
            android:textSize="19sp"
            android:layout_marginStart="120dp" />


    </RelativeLayout>

</LinearLayout>